AG-6440 - Fix ExpandableSnippet expand/collapse icon for edge-cases.

--- a/grid-packages/ag-grid-docs/documentation/src/components/expandable-snippet/ExpandableSnippet.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/expandable-snippet/ExpandableSnippet.module.scss
@@ -48,10 +48,20 @@
     .union-type-property {
         position: relative;
 
-        .expander {
+        > .expander {
             position: absolute;
             left: -34px;
             top: 1px;
+        }
+    }
+
+    .union-type-object {
+        position: relative;
+
+        > .expander {
+            position: absolute;
+            left: -16px;
+            top: 2px;
         }
     }
 }
